--- a/data/configurations/configuration_rgbmtstar.yaml
+++ b/data/configurations/configuration_rgbmtstar.yaml
@@ -1,4 +1,4 @@
 MAX_NUM_ITER: 1000000000		          # Maximal number of algorithm iterations
 MAX_NUM_STATES: 1000000000		        # Maximal number of considered states
 MAX_PLANNING_TIME: 60000		          # Maximal algorithm runtime in [ms]
-TERMINATE_WHEN_PATH_IS_FOUND: false	  # Whether to terminate when path is found (default: false)
+TERMINATE_WHEN_PATH_IS_FOUND: true	  # Whether to terminate when path is found (default: false)
