--- a/data/xarm6/scenario_real_time/scenario_real_time.yaml
+++ b/data/xarm6/scenario_real_time/scenario_real_time.yaml
@@ -13,7 +13,7 @@ robot:
   table_included: false      # Please check whether 'table' (required as the first obstacle) is (un)commented within 'obstacles'
   
 testing:
-  num_obstacles_init: 50
+  num_obstacles_init: 1
   max_num_obstacles: 100
   max_obs_vel: 0.1 	# [m / iter.] 	delta_q * r > max_obs_vel, eps = sqrt(num_DOFs) * delta_q
   
@@ -21,11 +21,10 @@ testing:
   num_success_test_init: 0
   max_num_tests: 1000
   static_planner_name: "RGBMT*"
-  # static_planner_name: "RGBTConnect"
-  # routines: ["isValid [us]", 
-  #	     "computeDistance [us]", 
-  #	     "replan [ms]", 
-  #	     "generateGBur [ms]", 
-  #	     "generateHorizon [us]", 
-  #	     "updateHorizon [us]"]
-  routines: ["replan [ms]"]
+  static_planner_name: "RGBTConnect"
+  routines: ["replan [ms]", 
+  	     "isValid [us]", 
+  	     "computeDistance [us]", 
+  	     "generateGBur [ms]", 
+  	     "generateHorizon [us]", 
+  	     "updateHorizon [us]"]
