Maximal angular velocity of each robot's joint in [rad/s] can be set, which determines an advancing step in C-space in [rad] when moving from current towards next state in a single iteration. Moreover, maximal velocity and acceleration of each obstacle can be specified. Most changes are in computeReachedState and computeNextState function.

--- a/data/xarm6/scenario_real_time/scenario_real_time.yaml
+++ b/data/xarm6/scenario_real_time/scenario_real_time.yaml
@@ -19,7 +19,9 @@ robot:
 testing:
   num_random_obstacles_init: 1		# Number of random obstacles to start with the testing
   max_num_random_obstacles: 100		# Maximal number of random obstacles to be added
-  max_obs_vel: 0.1 			# [m / iter.]
+  max_obs_vel: 1.6 			# [m/s]
+  max_obs_acc: 1.6 			# [m/s²]
   num_test_init: 1
   num_success_test_init: 0
   max_num_tests: 1000
+  successful_tests: false		# If true, run totally 'max_num_tests' successful tests 
