Robot maximal velocity, acceleration and jerk can be specified in yaml file, and they are attributes of the robot.

--- a/data/xarm6/scenario_real_time/scenario_real_time.yaml
+++ b/data/xarm6/scenario_real_time/scenario_real_time.yaml
@@ -1,8 +1,9 @@
 obstacles:  
-  #- box:
-  #    dim: [0.05, 0.05, 0.05]
-  #    trans: [0.5, 0.5, 0.5]
-  #    rot: [0, 0, 0, 0]
+  # fixed obstacle - table
+  - box:
+      dim: [1.5, 1.5, 0.1]
+      trans: [0, 0, -0.05]
+      rot: [0, 0, 0, 0]
       
 robot:
   type: "xarm6"
@@ -10,18 +11,20 @@ robot:
   space: "RealVectorSpace"
   num_DOFs: 6
   start: [0, 0, 0, 3.1415, 1.5708, 0]
-  goal: [3.1415, 0, -1.5708, 0, 0, 3.1415]
-  gripper_length: 0      # In [m]
-  # capsules_radius: [0, 0, 0, 0, 0, 0]
-  capsules_radius: [0.047, 0.12, 0.11, 0.09, 0.05, 0.0380] 	# When gripper is not attached
-  table_included: false      # Please check whether 'table' (required as the first obstacle) is (un)commented within 'obstacles'
+  goal:  [3.1415, 0, -1.5708, 0, 0, 3.1415]
+  capsules_radius: [0.047, 0.12, 0.11, 0.09, 0.05, 0.1]     # When the gripper is attached
+  gripper_length: 0.17      # In [m]
+  table_included: true      # Please check whether 'table' (required as the first obstacle) is (un)commented within 'obstacles'
+  max_vel:  [3.1415, 3.1415, 3.1415, 3.1415, 3.1415, 3.1415]  # Maximal velocity of each robot's joint in [rad/s]
+  max_acc:  [6.3611, 6.3611, 6.3611, 6.3611, 6.3611, 6.3611]  # Maximal acceleration of each robot's joint in [rad/s²]
+  max_jerk: [159.15, 159.15, 159.15, 159.15, 159.15, 159.15]  # Maximal jerk of each robot's joint in [rad/s³]
   
 testing:
   num_random_obstacles_init: 1		# Number of random obstacles to start with the testing
   max_num_random_obstacles: 100		# Maximal number of random obstacles to be added
-  max_obs_vel: 1.6 			# [m/s]
-  max_obs_acc: 1.6 			# [m/s²]
+  max_obs_vel: 1.6 			          # [m/s]
+  max_obs_acc: 0 			            # [m/s²]
   num_test_init: 1
   num_success_test_init: 0
   max_num_tests: 1000
-  successful_tests: false		# If true, run totally 'max_num_tests' successful tests 
+  successful_tests: false		      # If true, run totally 'max_num_tests' successful tests 
