--- a/data/xarm6/scenario_real_time/scenario_real_time1.yaml
+++ b/data/xarm6/scenario_real_time/scenario_real_time1.yaml
@@ -53,7 +53,10 @@ robot:
   num_DOFs: 6
   start: [1.5708, 1.5708, -2.3562, 0, 0, 0]
   goal: [-1.5708, 0, -2.3562, 0, 0, 0]
-  gripper_length: 0      # In [m]
   capsules_radius: [0.047, 0.12, 0.11, 0.09, 0.05, 0.0380] 	# When gripper is not attached
 #   capsules_radius: [0.047, 0.12, 0.11, 0.09, 0.05, 0.08]    # When gripper is attached
+  gripper_length: 0      # In [m]
   table_included: false      # Please check whether 'table' (required as the first obstacle) is (un)commented within 'obstacles'
+  max_vel:  [3.1415, 3.1415, 3.1415, 3.1415, 3.1415, 3.1415]  # Maximal velocity of each robot's joint in [rad/s]
+  max_acc:  [6.3611, 6.3611, 6.3611, 6.3611, 6.3611, 6.3611]  # Maximal acceleration of each robot's joint in [rad/s²]
+  max_jerk: [159.15, 159.15, 159.15, 159.15, 159.15, 159.15]  # Maximal jerk of each robot's joint in [rad/s³]
