Files considering environment are now much better organized (following object-oriented programming). Other minor modifications are made consequently.

--- a/data/xarm6/scenario_real_time/scenario_real_time.yaml
+++ b/data/xarm6/scenario_real_time/scenario_real_time.yaml
@@ -1,30 +1,34 @@
-obstacles:  
-  # fixed obstacle - table
+environment:
   - box:
+      label: "table"
       dim: [1.5, 1.5, 0.1]
-      trans: [0, 0, -0.05]
-      rot: [0, 0, 0, 0]
-      
+      pos: [0, 0, -0.05]
+
+random_obstacles:
+  init_num: 1		                  # Number of random obstacles to start with the testing
+  max_num: 100		                # Maximal number of random obstacles to be added
+  max_vel: 1.6 			              # Maximal velocity of each obstacle in [m/s]
+  max_acc: 0 			                # Maximal acceleration of each obstacle in [m/s²]
+  dim: [0.01, 0.01, 0.01]         # Dimensions of each random obstacle in [m]
+
 robot:
   type: "xarm6"
   urdf: "/data/xarm6/xarm6.urdf"
   space: "RealVectorSpace"
   num_DOFs: 6
-  start: [0, 0, 0, 3.1415, 1.5708, 0]
-  goal:  [3.1415, 0, -1.5708, 0, 0, 3.1415]
-  capsules_radius: [0.047, 0.12, 0.11, 0.09, 0.05, 0.1]     # When the gripper is attached
-  gripper_length: 0.17      # In [m]
-  table_included: true      # Please check whether 'table' (required as the first obstacle) is (un)commented within 'obstacles'
+  q_start: [0, 0, 0, 3.1415, 1.5708, 0]
+  q_goal:  [3.1415, 0, -1.5708, 0, 0, 3.1415]
+  capsules_radius: [0.047, 0.12, 0.11, 0.09, 0.05, 0.1]       # When the gripper is attached
+  gripper_length: 0.17                                        # In [m]
+  table_included: true                                        # Please check whether 'table' is added in 'environment'
+  WS_center: [0.0, 0.0, 0.267]                                # Workspace center point in [m]
+  WS_radius: 1.0                                              # Workspace radius in [m] assuming spherical workspace shape
   max_vel:  [3.1415, 3.1415, 3.1415, 3.1415, 3.1415, 3.1415]  # Maximal velocity of each robot's joint in [rad/s]
   max_acc:  [6.3611, 6.3611, 6.3611, 6.3611, 6.3611, 6.3611]  # Maximal acceleration of each robot's joint in [rad/s²]
   max_jerk: [159.15, 159.15, 159.15, 159.15, 159.15, 159.15]  # Maximal jerk of each robot's joint in [rad/s³]
-  
+
 testing:
-  num_random_obstacles_init: 1		# Number of random obstacles to start with the testing
-  max_num_random_obstacles: 100		# Maximal number of random obstacles to be added
-  max_obs_vel: 1.6 			          # [m/s]
-  max_obs_acc: 0 			            # [m/s²]
-  num_test_init: 1
-  num_success_test_init: 0
-  max_num_tests: 1000
-  successful_tests: false		      # If true, run totally 'max_num_tests' successful tests 
+  init_num: 1                     # Number of testing to start with
+  init_num_success: 0             # Initial number of already achieved successful tests
+  max_num: 1000                   # Maximal number of tests that should be carried out
+  reach_successful_tests: false	  # If true, run totally 'max_num_tests' successful tests 
