--- a/data/planar_2dof/scenario3/scenario3.yaml
+++ b/data/planar_2dof/scenario3/scenario3.yaml
@@ -1,28 +1,28 @@
-obstacles:
+environment:
   - box:
       dim: [0.3, 0.3, 0.1]
-      trans: [0.65, 0.7, 0]
-      rot: [0, 0, 0, 0]
+      pos: [0.65, 0.7, 0]
   - box:
       dim: [0.3, 0.3, 0.1]
-      trans: [-0.65, 0.7, 0]
-      rot: [0, 0, 0, 0]
+      pos: [-0.65, 0.7, 0]
   - box:
       dim: [0.1, 0.1, 0.1]
-      trans: [0.65, 1.3, 0]
-      rot: [0, 0, 0, 0]
+      pos: [0.65, 1.3, 0]
   - box:
       dim: [0.1, 0.1, 0.1]
-      trans: [-0.65, 1.3, 0]
-      rot: [0, 0, 0, 0]
+      pos: [-0.65, 1.3, 0]
 
-num_random_obstacles: 0 	# If set to zero, random obstacles will not be initialized
+random_obstacles:
+  num: 0	                        # Number of random obstacles to be added
+  dim: [0.01, 0.01, 0.01]         # Dimensions of each random obstacle in [m]
 
 robot:
   type: "planar_2DOF"
   urdf: "/data/planar_2dof/planar_2dof.urdf"
   space: "RealVectorSpaceFCL"
   num_DOFs: 2
-  start: [1.8, 1.25]
-  goal: [1.3416, -1.25]
+  q_start: [1.8, 1.25]
+  q_goal:  [1.3416, -1.25]
+  WS_center: [0.0, 0.0, 0.0]                          # Workspace center point in [m]
+  WS_radius: 2                                        # Workspace radius in [m] assuming spherical workspace shape
   
