--- a/data/xarm6/scenario2/scenario2.yaml
+++ b/data/xarm6/scenario2/scenario2.yaml
@@ -1,54 +1,48 @@
-obstacles:
-#   fixed obstacle - table
-#   - box:
-#       dim: [1.5, 1.5, 0.1]
-#       trans: [0, 0, -0.05]
-#       rot: [0, 0, 0, 0]
+environment:
+  - box:
+      label: "table"
+      dim: [1.5, 1.5, 0.1]
+      pos: [0, 0, -0.05]
+  - box:
+      dim: [0.1, 0.4, 0.7]
+      pos: [-0.3, 0.5, 0.35]
+  - box:
+      dim: [0.1, 0.4, 0.7]
+      pos: [0.3, 0.5, 0.35]
+  - box:
+      dim: [0.5, 0.4, 0.1]
+      pos: [0, 0.5, 0.65]
+  - box:
+      dim: [0.5, 0.4, 0.1]
+      pos: [0, 0.5, 0.05]
+  - box:
+      dim: [0.1, 0.4, 0.7]
+      pos: [-0.3, -0.5, 0.35]
+  - box:
+      dim: [0.1, 0.4, 0.7]
+      pos: [0.3, -0.5, 0.35]
+  - box:
+      dim: [0.5, 0.4, 0.1]
+      pos: [0, -0.5, 0.65]
+  - box:
+      dim: [0.5, 0.4, 0.1]
+      pos: [0, -0.5, 0.05]
 
-  - box:
-      dim: [0.1, 0.4, 0.7]
-      trans: [-0.3, 0.5, 0.35]
-      rot: [0, 0, 0, 0]
-  - box:
-      dim: [0.1, 0.4, 0.7]
-      trans: [0.3, 0.5, 0.35]
-      rot: [0, 0, 0, 0]
-  - box:
-      dim: [0.5, 0.4, 0.1]
-      trans: [0, 0.5, 0.65]
-      rot: [0, 0, 0, 0]
-  - box:
-      dim: [0.5, 0.4, 0.1]
-      trans: [0, 0.5, 0.05]
-      rot: [0, 0, 0, 0]
-  - box:
-      dim: [0.1, 0.4, 0.7]
-      trans: [-0.3, -0.5, 0.35]
-      rot: [0, 0, 0, 0]
-  - box:
-      dim: [0.1, 0.4, 0.7]
-      trans: [0.3, -0.5, 0.35]
-      rot: [0, 0, 0, 0]
-  - box:
-      dim: [0.5, 0.4, 0.1]
-      trans: [0, -0.5, 0.65]
-      rot: [0, 0, 0, 0]
-  - box:
-      dim: [0.5, 0.4, 0.1]
-      trans: [0, -0.5, 0.05]
-      rot: [0, 0, 0, 0]
-
-num_random_obstacles: 0 	# If set to zero, random obstacles will not be initialized
+random_obstacles:
+  num: 0	                        # Number of random obstacles to be added
+  dim: [0.01, 0.01, 0.01]         # Dimensions of each random obstacle in [m]
 
 robot:
   type: "xarm6"
   urdf: "/data/xarm6/xarm6.urdf"
 #   space: "RealVectorSpace"
-  space: "RealVectorSpaceFCL"   # Currently, it does not consider a gripper!
+  space: "RealVectorSpaceFCL"   		                        # Currently, it does not consider a gripper!
   num_DOFs: 6
-  start: [1.5708, 1.3849, -2.9557, 1.5708, 0, 0]
-  goal: [-1.5708, 1.3849, -2.9557, 1.5708, 0, 0]
-  gripper_length: 0      # In [m]
-  capsules_radius: [0.047, 0.12, 0.11, 0.09, 0.05, 0.0380] 	# When gripper is not attached
+  q_start: [1.5708, 1.3849, -2.9557, 1.5708, 0, 0]
+  q_goal:  [-1.5708, 1.3849, -2.9557, 1.5708, 0, 0]
+  capsules_radius: [0.047, 0.12, 0.11, 0.09, 0.05, 0.0380] 		# When gripper is not attached
 #   capsules_radius: [0.047, 0.12, 0.11, 0.09, 0.05, 0.08]    # When gripper is attached
-  table_included: false      # Please check whether 'table' (required as the first obstacle) is (un)commented within 'obstacles'  
+  gripper_length: 0                                         	# In [m]
+  table_included: false      								    # Please check whether 'table' is added in 'environment'  
+  WS_center: [0.0, 0.0, 0.267]                                  # Workspace center point in [m]
+  WS_radius: 1.0                                                # Workspace radius in [m] assuming spherical workspace shape
