--- a/data/xarm6/scenario_real_time/scenario_real_time1.yaml
+++ b/data/xarm6/scenario_real_time/scenario_real_time1.yaml
@@ -1,62 +1,62 @@
-obstacles:
-  # fixed obstacle - table
-  #- box:
-  #    dim: [1.5, 1.5, 0.1]
-  #    trans: [0, 0, -0.05]
-  #    rot: [0, 0, 0, 0]
+environment:
   - box:
-      dim: [0.1, 0.5, 1]
-      trans: [0.5, 0.5, 0.5]
-      rot: [0, 0, 0, 0]
+      label: "table"
+      dim: [1.5, 1.5, 0.1]
+      pos: [0, 0, -0.05]
   - box:
+      label: "dynamic_obstacle"
       dim: [0.1, 0.5, 1]
-      trans: [0.7, 0.5, 0.5]
-      rot: [0, 0, 0, 0]
+      pos: [0.5, 0.5, 0.5]
   - box:
+      label: "dynamic_obstacle"
       dim: [0.1, 0.5, 1]
-      trans: [0.9, 0.5, 0.5]
-      rot: [0, 0, 0, 0]
+      pos: [0.7, 0.5, 0.5]
   - box:
+      label: "dynamic_obstacle"
       dim: [0.1, 0.5, 1]
-      trans: [1.1, 0.5, 0.5]
-      rot: [0, 0, 0, 0]
+      pos: [0.9, 0.5, 0.5]
   - box:
+      label: "dynamic_obstacle"
       dim: [0.1, 0.5, 1]
-      trans: [1.3, 0.5, 0.5]
-      rot: [0, 0, 0, 0]
+      pos: [1.1, 0.5, 0.5]
   - box:
+      label: "dynamic_obstacle"
       dim: [0.1, 0.5, 1]
-      trans: [1.5, 0.5, 0.5]
-      rot: [0, 0, 0, 0]
+      pos: [1.3, 0.5, 0.5]
   - box:
+      label: "dynamic_obstacle"
       dim: [0.1, 0.5, 1]
-      trans: [1.7, 0.5, 0.5]
-      rot: [0, 0, 0, 0]
+      pos: [1.5, 0.5, 0.5]
   - box:
+      label: "dynamic_obstacle"
       dim: [0.1, 0.5, 1]
-      trans: [1.9, 0.5, 0.5]
-      rot: [0, 0, 0, 0]
+      pos: [1.7, 0.5, 0.5]
   - box:
+      label: "dynamic_obstacle"
       dim: [0.1, 0.5, 1]
-      trans: [2.1, 0.5, 0.5]
-      rot: [0, 0, 0, 0]
+      pos: [1.9, 0.5, 0.5]
   - box:
+      label: "dynamic_obstacle"
       dim: [0.1, 0.5, 1]
-      trans: [2.3, 0.5, 0.5]
-      rot: [0, 0, 0, 0]
+      pos: [2.1, 0.5, 0.5]
+  - box:
+      label: "dynamic_obstacle"
+      dim: [0.1, 0.5, 1]
+      pos: [2.3, 0.5, 0.5]
       
 robot:
   type: "xarm6"
   urdf: "/data/xarm6/xarm6.urdf"
   space: "RealVectorSpace"
-  # space: "RealVectorSpaceFCL"   # Currently, it does not consider a gripper!
   num_DOFs: 6
-  start: [1.5708, 1.5708, -2.3562, 0, 0, 0]
-  goal: [-1.5708, 0, -2.3562, 0, 0, 0]
-  capsules_radius: [0.047, 0.12, 0.11, 0.09, 0.05, 0.0380] 	# When gripper is not attached
+  q_start: [1.5708, 1.5708, -2.3562, 0, 0, 0]
+  q_goal:  [-1.5708, 0, -2.3562, 0, 0, 0]
+  capsules_radius: [0.047, 0.12, 0.11, 0.09, 0.05, 0.0380] 	  # When gripper is not attached
 #   capsules_radius: [0.047, 0.12, 0.11, 0.09, 0.05, 0.08]    # When gripper is attached
   gripper_length: 0      # In [m]
-  table_included: false      # Please check whether 'table' (required as the first obstacle) is (un)commented within 'obstacles'
+  table_included: false                                       # Please check whether 'table' is added in 'environment'
+  WS_center: [0.0, 0.0, 0.267]                                # Workspace center point in [m]
+  WS_radius: 1.0                                              # Workspace radius in [m] assuming spherical workspace shape
   max_vel:  [3.1415, 3.1415, 3.1415, 3.1415, 3.1415, 3.1415]  # Maximal velocity of each robot's joint in [rad/s]
   max_acc:  [6.3611, 6.3611, 6.3611, 6.3611, 6.3611, 6.3611]  # Maximal acceleration of each robot's joint in [rad/s²]
   max_jerk: [159.15, 159.15, 159.15, 159.15, 159.15, 159.15]  # Maximal jerk of each robot's joint in [rad/s³]
