Trajectory planning is implemented using quintic splines, thus all constraints on robot's maximal velocity, acceleration and jerk can now be satisfied.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,6 +10,7 @@ set(INCLUDE_DIRS
         ${PROJECT_SOURCE_DIR}/include/planners/rbt
         ${PROJECT_SOURCE_DIR}/include/planners/drbt
         ${PROJECT_SOURCE_DIR}/include/planners/rbt_star
+        ${PROJECT_SOURCE_DIR}/include/planners/trajectory
         ${PROJECT_SOURCE_DIR}/include/robots
         ${PROJECT_SOURCE_DIR}/include/environments
         ${PROJECT_SOURCE_DIR}/include/environments/objects
