--- a/.github/workflows/rpmplv2.yaml
+++ b/.github/workflows/rpmplv2.yaml
@@ -11,7 +11,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          sudo apt update && sudo apt upgrade &&sudo apt install -y apt-transport-https \
+          sudo apt update && sudo apt upgrade && sudo apt install -y libunwind-dev apt-transport-https \
           ca-certificates curl wget gnupg make cmake lsb-release software-properties-common \
           libeigen3-dev libkdl-parser-dev libgflags-dev libgoogle-glog-dev liborocos-kdl-dev \
           libyaml-cpp-dev liburdf-dev python3-pip libfcl-dev libnanoflann-dev \
