--- a/.github/workflows/rpmplv2.yaml
+++ b/.github/workflows/rpmplv2.yaml
@@ -30,6 +30,6 @@ jobs:
 
       - name: Test (optional)
         run: |
-          if [ -f build/tests ]; then
+          if [ -d build/tests ]; then
             ctest --test-dir build/tests -C Release --output-on-failure
           fi
