--- a/.github/workflows/rpmplv2.yaml
+++ b/.github/workflows/rpmplv2.yaml
@@ -8,6 +8,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-22.04
+    env:
+      CLANG_VERSION: 18
     steps:
       - uses: actions/checkout@v1
 
@@ -17,7 +19,17 @@ jobs:
           ca-certificates curl wget gnupg make cmake lsb-release software-properties-common \
           libeigen3-dev libkdl-parser-dev libgflags-dev libgoogle-glog-dev liborocos-kdl-dev \
           libgtest-dev libyaml-cpp-dev liburdf-dev python3-pip libfcl-dev libnanoflann-dev \
-          && pip3 install trimesh urdfpy
+          && pip3 install trimesh urdfpy && \
+          wget https://apt.llvm.org/llvm.sh && \
+          sed -i "s/add-apt-repository \"${REPO_NAME}\"/add-apt-repository \"${REPO_NAME}\" -y/g" llvm.sh && \
+          chmod +x llvm.sh && \
+          ./llvm.sh $CLANG_VERSION -y && \
+          apt-get install -y --no-install-recommends clang-$CLANG_VERSION clang-tidy-$CLANG_VERSION clang-format-$CLANG_VERSION \
+          llvm-$CLANG_VERSION-dev libc++-$CLANG_VERSION-dev libomp-$CLANG_VERSION-dev libc++abi-$CLANG_VERSION-dev libunwind-$CLANG_VERSION-dev && \
+          sudo update-alternatives --install /usr/bin/clang clang /usr/bin/clang-$CLANG_VERSION $CLANG_VERSION \
+          --slave /usr/bin/clang++ clang++ /usr/bin/clang++-$CLANG_VERSION \
+          --slave /usr/bin/clang-tidy clang-tidy /usr/bin/clang-tidy-$CLANG_VERSION \
+          --slave /usr/bin/clang-format clang-format /usr/bin/clang-format-$CLANG_VERSION
         shell: bash
 
       - name: Configure with CMake
