Trying out different setup for clang in github actions.

--- a/.github/workflows/rpmplv2.yaml
+++ b/.github/workflows/rpmplv2.yaml
@@ -26,10 +26,8 @@ jobs:
           sudo ./llvm.sh $CLANG_VERSION -y && \
           sudo apt-get install -y --no-install-recommends clang-$CLANG_VERSION clang-tidy-$CLANG_VERSION clang-format-$CLANG_VERSION \
           llvm-$CLANG_VERSION-dev libc++-$CLANG_VERSION-dev libomp-$CLANG_VERSION-dev libc++abi-$CLANG_VERSION-dev libunwind-$CLANG_VERSION-dev && \
-          sudo update-alternatives --install /usr/bin/clang clang /usr/bin/clang-$CLANG_VERSION $CLANG_VERSION \
-          --slave /usr/bin/clang++ clang++ /usr/bin/clang++-$CLANG_VERSION \
-          --slave /usr/bin/clang-tidy clang-tidy /usr/bin/clang-tidy-$CLANG_VERSION \
-          --slave /usr/bin/clang-format clang-format /usr/bin/clang-format-$CLANG_VERSION
+          sudo update-alternatives --install /usr/bin/cc cc /usr/bin/clang-$CLANG_VERSION 100 && \
+          sudo update-alternatives --install /usr/bin/c++ c++ /usr/bin/clang++-$CLANG_VERSION 100
         shell: bash
 
       - name: Configure with CMake
