--- a/.github/workflows/rpmplv2.yaml
+++ b/.github/workflows/rpmplv2.yaml
@@ -31,7 +31,10 @@ jobs:
         shell: bash
 
       - name: Configure with CMake
-        run: cmake -B build -DCMAKE_BUILD_TYPE=Release
+        run: |
+          export CC=/usr/bin/clang
+          export CXX=/usr/bin/clang++
+          cmake -B build -DCMAKE_BUILD_TYPE=Release
 
       - name: Build
         run: |
