--- a/.github/workflows/rpmplv2.yaml
+++ b/.github/workflows/rpmplv2.yaml
@@ -41,8 +41,7 @@ jobs:
 
       - name: Build
         run: |
-          mkdir -p build
-          cmake --build build --config Release -DCMAKE_CXX_COMPILER=clang++-$CLANG_VERSION
+          cmake --build build --config Release
 
       - name: Test (optional)
         run: |
