Trying out without clang and Werror.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,12 +10,10 @@ project(
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-message("------------------ Using compiler ${CMAKE_CXX_COMPILER} ------------------")
+message("------------------ Using compiler: ${CMAKE_CXX_COMPILER} ------------------")
 
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
-  set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -stdlib=libstdc++")
-  message("------------------ Using lib ${CMAKE_EXE_LINKER_FLAGS} ------------------")
-  add_compile_options(-Wall -Wextra -Wpedantic -Werror)
+  add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
 
 # Only do these if this is the main project, and not if it is included through add_subdirectory
