--- a/data/configurations/configuration_drgbt.yaml
+++ b/data/configurations/configuration_drgbt.yaml
@@ -5,7 +5,7 @@ INIT_HORIZON_SIZE: 10		                # Initial horizon size
 TRESHOLD_WEIGHT: 0.5			              # Treshold for the replanning assessment. Range: between 0 and 1
 D_CRIT: 0.05			                      # Critical distance in W-space to compute critical nodes
 MAX_NUM_MODIFY_ATTEMPTS: 10             # Maximal number of attempts when modifying bad or critical states
-STATIC_PLANNER_NAME: "RGBMT*"           # Name of a static planner (for obtaining the predefined path). Default: "RGBMT*" or "RGBTConnect"
+STATIC_PLANNER_TYPE: "RGBMT*"           # Name of a static planner (for obtaining the predefined path). Default: "RGBMT*" or "RGBTConnect"
 REAL_TIME_SCHEDULING: "FPS"             # "FPS" - Fixed Priority Scheduling; "none" - Without real-time scheduling
 MAX_TIME_TASK1: 0.050                   # Maximal time in [s] which Task 1 can take from the processor
 MAX_TIME_UPDATE_CURRENT_STATE: 0.002    # Maximal time in [s] for the routine 'updateCurrentState'
